--- a/week1_session3_matplotlib.ipynb
+++ b/week1_session3_matplotlib.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python Programming: Data Visualisation using *matplotlib*"
+    "## Python Programming: Data Visualisation using *matplotlib* and *Seaborn*"
    ]
   },
   {
@@ -28,16 +28,14 @@
    "source": [
     "- **Instructor**: Moritz Seiler, AG Ritter, Charité - Universitätsmedizin Berlin (moritz.seiler@charite.de) <br>\n",
     "- **Target audience**: Medical students from Charité<br>\n",
-    "- **Course date**: February 2021"
+    "- **Course date**: July 2021"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:** If you are using this notebook outside of Google Colab,**please ensure that you're using a Python 3.6 or higher kernel**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\". <br>\n",
-    "\n",
-    "**Executing the below cell should return a version higher than 3.6.0**"
+    "**First, please make sure, that you're using the Python 3.6 or later kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version go to the tab *Kernel* --> *Change Kernel* and select *Python 3.6*."
    ]
   },
   {
@@ -130,7 +128,7 @@
     "https://matplotlib.org/tutorials/introductory/usage.html#sphx-glr-tutorials-introductory-usage-py<br>\n",
     "https://matplotlib.org/tutorials/introductory/sample_plots.html#sphx-glr-tutorials-introductory-sample-plots-py\n",
     "- RKI COVID-19 dataset for Berlin<br>\n",
-    "https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0"
+    "https://opendata.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0.csv"
    ]
   },
   {
@@ -200,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid19.head()"
+    "covid19.columns"
    ]
   },
   {
@@ -209,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid19.columns"
+    "covid19.head()"
    ]
   },
   {
@@ -290,7 +288,20 @@
    "source": [
     "# Import the pyplot module\n",
     "import matplotlib.pyplot as plt\n",
-    "#plt.style.use('fivethirtyeight')"
+    "#plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting interactively within an IPython notebook can be done with the magic ```%matplotlib``` command. In the IPython notebook, you also have the option of embedding graphics directly in the notebook, with two possible options:<br>\n",
+    "    ```%matplotlib notebook``` will lead to interactive plots embedded within the notebook <br>\n",
+    "    ```%matplotlib inline``` will lead to static images of your plot embedded in the notebook\n",
+    "\n",
+    "For this book, we will generally opt for ```%matplotlib inline```."
    ]
   },
   {
@@ -374,7 +385,7 @@
     "3. **Plot**\n",
     "4. **Customise plot**\n",
     "5. **Save plot**\n",
-    "6. **Show plot**"
+    "6. (**Show plot**)"
    ]
   },
   {
@@ -696,7 +707,7 @@
     "ax.set_xlabel('Bundesland') # Step 4\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen nach Bundesland in Deutschland')\n",
-    "plt.show() # Step 6"
+    "#plt.show() # Step 6"
    ]
   },
   {
@@ -717,7 +728,7 @@
     "ax.set_ylabel('Bundesland')\n",
     "ax.set_xlabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen nach Bundesland in Deutschland')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -755,7 +766,7 @@
     "ax.set_ylabel('Bundesland') # Step 4\n",
     "ax.set_xlabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen nach Bundesland in Deutschland')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -816,7 +827,7 @@
     "ax.set_ylabel('Bundesland')\n",
     "ax.set_title('Übermittelte Covid19-Infektionen pro Bundesland');\n",
     "ax.legend()\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -898,7 +909,7 @@
     "ax.legend()\n",
     "ax.set_xlabel('Meldedatum')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -940,7 +951,7 @@
     "ax.legend()\n",
     "ax.set_xlabel('Meldedatum')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -990,7 +1001,7 @@
     "            bbox_inches = 'tight'); # bbox_inches = 'tight' created a padding around the figure\n",
     "\n",
     "### Step 6: Show plot\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1454,7 +1465,7 @@
     "ax.set_xlabel('Geschlecht')\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Gechlechterverteilung der übermittelten Covid-19 positiv Fälle in Berlin')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1494,7 +1505,7 @@
     "ax.set_ylabel('CFR')\n",
     "ax.set_title('CFR nach Altersgruppe in Berlin und Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "plt.show()\n"
+    "#plt.show()"
    ]
   },
   {
@@ -1522,7 +1533,7 @@
     "ax.set_ylabel('CFR')\n",
     "ax.set_title('CFR in Berlin und Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1530,7 +1541,7 @@
    "metadata": {},
    "source": [
     "4.2:<br>\n",
-    "Although, the CFR per age group is lower in Mecklenburg-Vorpommern compared to Berlin, the total CFR is almost twice as high. This phenomenon is known in statistics as *Simpson's paradox*. Where trends appear when comparing different groups which then disappear or reverse when the groups are combined. To resolve this problem, the causal relations have to be addressed. The reason here is the difference in the age distributions of Covid19 patients in the two states. As you can see from the plot below, the number of 'older' patients in Mecklenburg-Vorpommern is relatively higher compared to Berlin, leading to a higher overall CFR."
+    "Although, the CFR per age group is lower in Mecklenburg-Vorpommern compared to Berlin, the total CFR is higher. This phenomenon is known in statistics as *Simpson's paradox*. Where trends appear when comparing different groups which then disappear or reverse when the groups are combined. To resolve this problem, the causal relations have to be addressed. The reason here is the difference in the age distributions of Covid19 patients in the two states. As you can see from the plot below, the number of 'older' patients in Mecklenburg-Vorpommern is relatively higher compared to Berlin, leading to a higher overall CFR."
    ]
   },
   {
@@ -1546,7 +1557,7 @@
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infektionen nach Altersgruppe in Berlin and Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1562,7 +1573,7 @@
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Todeszahlen nach Altersgruppe in Berlin und Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1591,7 +1602,7 @@
     "ax.set_xlabel('Meldedatum')\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Verlauf der übermittelten täglichen Covid-19 Infektionen in Berlin')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1629,7 +1640,7 @@
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen im Verlauf nach Altergruppe in Berlin')\n",
     "ax.legend()\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1663,19 +1674,20 @@
     "\n",
     "ax.set_xlabel('Bundesland')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "ax.set_title('Verteilung übermittelter täglicher Covid-19 Infektionszahlen in Berlin und Brandenbug')\n",
+    "ax.set_title('Verteilung übermittelter täglicher Covid-19 Infektionszahlen in Berlin und Brandenburg')\n",
     "plt.show()\n",
     "\n",
     "### alternatively: Histogram\n",
     "fig, ax = plt.subplots(1, 1, figsize=(12,6))\n",
     "\n",
-    "ax.hist(berlin_cases_daily['AnzahlFall'], alpha=0.5)\n",
-    "ax.hist(brandenburg_cases_daily['AnzahlFall'], alpha=0.5)\n",
+    "ax.hist(berlin_cases_daily['AnzahlFall'], alpha=0.5, label='Berlin')\n",
+    "ax.hist(brandenburg_cases_daily['AnzahlFall'], alpha=0.5, label='Brandenburg')\n",
     "\n",
     "ax.set_xlabel('Anzahl übermittelter Covid-19 Fälle')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "ax.set_title('Verteilung übermittelter täglicher Covid-19 Infektionszahlen in Berlin und Brandenbug')\n",
-    "plt.show()"
+    "ax.set_title('Verteilung übermittelter täglicher Covid-19 Infektionszahlen in Berlin und Brandenburg')\n",
+    "ax.legend()\n",
+    "#plt.show()"
    ]
   },
   {
@@ -1832,7 +1844,7 @@
     "             y='y', \n",
     "             ax=ax)\n",
     "\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1856,7 +1868,7 @@
     "ax.set_xlabel('Anzahl übermittelter Fälle pro Tag')\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Verteilung der übermittelten täglichen Covid19-Neuinfektionen in Berlin')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1881,7 +1893,7 @@
     "# Plot cumulative cases for all states over time\n",
     "fig, ax = plt.subplots(1, 1, figsize=(12,6))\n",
     "sns.lineplot(x='Meldedatum', y='AnzahlFall', data=cases_cum, hue='Bundesland')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -1916,7 +1928,7 @@
     "\n",
     "ax.set_title('Gechlechterverteilung der übermittelten Covid-19-Infektionen in Berlin')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
