--- a/week1_session5_deep_learning.ipynb
+++ b/week1_session5_deep_learning.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "* **Instructor**: Moritz Seiler, AG Ritter, Charité - Universitätsmedizin Berlin (moritz.seiler@charite.de) <br>\n",
     "* **Target audience**:  Medical students from Charité<br>\n",
-    "* **Course date**:  February 2021"
+    "* **Course date**:  July 2021"
    ]
   },
   {
@@ -35,9 +35,7 @@
     "id": "rhSxBhNcUh8-"
    },
    "source": [
-    "> **Note:** If you are using this notebook outside of Google Colab,**please ensure that you're using a Python 3.6 or higher kernel**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\" or higher. <br>\n",
-    "\n",
-    "**Executing the below cell should return a version higher than 3.6.0**"
+    "**First, please make sure, that you're using the Python 3.6 kernel!**<br> You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab *Kernel* --> *Change Kernel* and select *Python 3.6*."
    ]
   },
   {
@@ -333,7 +331,7 @@
     "\n",
     "\n",
     "# Read the Diabetes data set \n",
-    "diabetes = pd.read_csv('https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/data/diabetes.csv')"
+    "diabetes = pd.read_csv('https://raw.githubusercontent.com/volkamerlab/ai_in_medicine/master/data/diabetes.csv')"
    ]
   },
   {
@@ -353,13 +351,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "4WgXZmQlVlQS"
    },
+   "source": [
+    "Remember yesterday's tutorial, we observed that some patients had 0 entries for the variables `Glucose`,`BMI`, and `BloodPressure`. We are going to remove these entries from the dataset since those unrealistic entries might have an influence on our predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "diabetes_clean = diabetes[(diabetes['Glucose']!=0) & \n",
+    "                          (diabetes['BMI']!=0) & \n",
+    "                          (diabetes['BloodPressure']!=0)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the dimensions of our final dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes_clean.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,7 +569,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(diabetes[['Glucose','BMI','Age']], diabetes['Outcome'], \n",
+    "X_train, X_test, y_train, y_test = train_test_split(diabetes_clean[['Glucose','BMI','Age']], diabetes_clean['Outcome'], \n",
     "                                                    test_size=0.2)"
    ]
   },
@@ -1318,7 +1343,8 @@
      "height": 1000
     },
     "id": "cfZhhlzrUh-M",
-    "outputId": "7ced0f04-dcfe-48e9-bae4-b761ae4329d6"
+    "outputId": "7ced0f04-dcfe-48e9-bae4-b761ae4329d6",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1338,8 +1364,8 @@
     "\n",
     "## Data preparation\n",
     "# Data Splitting\n",
-    "X_train, X_test, y_train, y_test = train_test_split(diabetes[['Glucose','BMI','Age']], \n",
-    "                                                    diabetes['Outcome'], \n",
+    "X_train, X_test, y_train, y_test = train_test_split(diabetes_clean[['Glucose','BMI','Age']], \n",
+    "                                                    diabetes_clean['Outcome'], \n",
     "                                                    test_size=0.2)\n",
     "\n",
     "# Data transformation       \n",
@@ -1787,7 +1813,8 @@
      "height": 195
     },
     "id": "5uYuYEvtUh-T",
-    "outputId": "110a2128-3a46-47ae-eee2-4d6e4d3609c5"
+    "outputId": "110a2128-3a46-47ae-eee2-4d6e4d3609c5",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -2524,9 +2551,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
