session4: minor typos fixed, links corrected

--- a/week1_session4_intro_to_ml_and_scikit_learn.ipynb
+++ b/week1_session4_intro_to_ml_and_scikit_learn.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:** If you are using this notebook outside of Google Colab, **please ensure that you're using a Python 3.6 or higher kernel**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\" or higher. <br>\n",
+    "> **Note:** If you are using this notebook outside of Google Colab, **please ensure that you're using a Python version 3.6 or higher**. You can check that in the top right corner of your browser window. If you're using a different Version, go to the Tab \"Kernel\" --> \"Change Kernel\" and select \"Python 3.6\" or higher. <br>\n",
     "\n",
     "**Executing the below cell should return a version higher than 3.6.0**"
    ]
@@ -117,11 +117,11 @@
    "source": [
     "### 5.1 Data loading and exploration\n",
     "\n",
-    "* In this tutorial, we will be exploring a diabetes dataset from the *Pima Indians Diabetes Database* that is freely [available here](https://www.kaggle.com/uciml/pima-indians-diabetes-database). We can also saved a copy in out github repository: https://github.com/volkamerlab/ai_in_medicine/raw/master/data/ .\n",
-    "* Our objective is to build a machine learning model that can accurately predict (diagnose) whether or not a patient has diabetes, based on several diagnostic measurements provided in the dataset.\n",
-    "* We will be using a subset of the larger database for ease-of-use. Our data subset is selected such that, all subjects in it are females, at least 21 years old, and of Pima Indian heritage.\n",
+    "* In this tutorial, we will look at the dataset provided by *Pima Indians Diabetes Database*. It is freely [available here](https://www.kaggle.com/uciml/pima-indians-diabetes-database). \n",
+    "* Our objective is to build a machine learning model that can accurately predict (diagnose) whether or not a patient has diabetes or not, based on several diagnostic measurements provided in the dataset.\n",
+    "* We will be using a subset of the larger database for ease-of-use. In our subset we have selected only females who are at least 21 years old, and of Pima Indian heritage. You can find this data subset in our github repository: https://github.com/volkamerlab/ai_in_medicine/raw/master/data/ .\n",
     "\n",
-    "In the process we will get to apply the things we learned in the last 3 programming sessions too.\n",
+    "*In this part, you will get a chance to apply the lessons learned in the previous programming sessions too.*\n",
     "\n",
     "The source publication of the data for reference:<br>\n",
     "*Smith, J.W., Everhart, J.E., Dickson, W.C., Knowler, W.C., & Johannes, R.S. (1988). Using the ADAP learning algorithm to forecast the onset of diabetes mellitus. In Proceedings of the Symposium on Computer Applications and Medical Care (pp. 261--265). IEEE Computer Society Press.*"
@@ -186,9 +186,9 @@
     "\n",
     "**Our task here is to use these 8 medical predictor variables and try and predict if the subject has diabetes or not** (i.e. to predict the 'outcome' variable):\n",
     "\n",
-    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/MLflowchart.png\">\n",
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/MLflowchart.png\">\n",
     "\n",
-    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/MLflowchart.png)*)"
+    "(*[link to the source diagram](https://github.com/volkamerlab/ai_in_medicine/raw/master/images/MLflowchart.png)*)"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "source": [
     "**Discussion:** \n",
     "1. What variables among these do you think are the most informative, medically, for diabetes diagnosis? \n",
-    "2. Would a machine learning model that can diagnose diabetes accurately be beneficial for the medical field?"
+    "2. Would a machine learning model that uses these variables and diagnoses diabetes accurately be beneficial for the medical field?"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "metadata": {},
    "source": [
     "Let us try to visualize the 'distribution' of the diabetes column in our data. <br>\n",
-    "We can use the `values_counts()` method in pandas.Dataframe, to print the count of diabetic/ non-diabetic subjects. "
+    "We can use the `values_counts()` method of a `pandas.Dataframe`, to print the count of diabetic/ non-diabetic subjects. "
    ]
   },
   {
@@ -338,10 +338,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is a very rare occurance that datasets are already clean, complete, and in the right shape.  In practice, either due to human errors or due to systemic issues, you will need to be preprocess the data before they can be used to train a machine learning model.\n",
+    "Generally, large datasets are messy with missing information or incorrect and invalid values due to human errors or systemic issues in the data collection process. Therefore, in practice, you need to preprocess the data. Otherwise, they wouldn't be reliable enough to train a machine learning model.\n",
     "\n",
     "Some of the prominent preprocessing steps include:\n",
-    "* Dropping non-numeric values\n",
+    "* Dropping invalid/non-numeric/gibberish values\n",
     "* Cleaning unneeded columns\n",
     "* Converting measurement units\n",
     "* Reducing noise using smoothing functions\n",
@@ -460,9 +460,9 @@
    "source": [
     "Is our task a classification task or a regression task?\n",
     "\n",
-    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/classandregress.png\" width=\"700\" />\n",
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/classandregress.png\" width=\"700\" />\n",
     "\n",
-    "*([link to source](http://tonyeiyalla.com/images/classandregress.png))*"
+    "*([link to source image](http://tonyeiyalla.com/images/classandregress.png))*"
    ]
   },
   {
@@ -577,10 +577,10 @@
     "<table>\n",
     "    <tr>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/tuning.png\" width=\"300\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/tuning.png\" width=\"300\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/fitting_data.png\" width=\"800\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/fitting_data.png\" width=\"800\" />\n",
     "        </td>\n",
     "    </tr>\n",
     "</table>\n",
@@ -630,7 +630,7 @@
    "metadata": {},
    "source": [
     "Python has a machine learning library called '*sklearn*' that provides several convenient functions for machine learning:<br>\n",
-    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/Scikit_learn_logo.png\" width=\"300\" /> \n",
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/Scikit_learn_logo.png\" width=\"300\" /> \n",
     "*([link to source](https://en.wikipedia.org/wiki/Scikit-learn#/media/File:Scikit_learn_logo_small.svg))* <br>\n",
     "\n",
     "*sklearn* library has a function called `train_test_split()` that can be used for splitting our dataset."
@@ -686,7 +686,7 @@
     "#### 5.5.1 Linear Support Vector Machine Classifier (LinearSVC)\n",
     "To separate the two classes of data points, there are many possible hyperplanes that could be chosen. Our objective is to find a plane that has the maximum margin, i.e the maximum distance between data points of both classes. \n",
     "\n",
-    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/hyperplane.png\" width=\"400\" /> \n",
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/hyperplane.png\" width=\"400\" /> \n",
     "\n",
     "*([link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/hyperplane.png))* \n"
    ]
@@ -725,20 +725,20 @@
     "<table>\n",
     "    <tr>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/linear_sep.png\" width=\"300\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/linear_sep.png\" width=\"300\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/non-linear_sep.png\" width=\"300\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/non-linear_sep.png\" width=\"300\" />\n",
     "        </td>\n",
     "    </tr>\n",
     "</table>\n",
     "\n",
-    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/linear_sep.png)*)\n",
-    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/non-linear_sep.png)*)\n",
+    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/master/images/linear_sep.png)*)\n",
+    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/master/images/non-linear_sep.png)*)\n",
     "\n",
-    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/sphx_glr_plot_iris_svc_001.png\" width=\"700\" />\n",
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw//master/images/sphx_glr_plot_iris_svc_001.png\" width=\"700\" />\n",
     "\n",
-    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/sphx_glr_plot_iris_svc_001.png)*)\n",
+    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/master/images/sphx_glr_plot_iris_svc_001.png)*)\n",
     "\n",
     "Reading the warning message from python, it appears as though our linear SVC did not converge. This may imply that our data is not linearly separable and maybe a different classifier is better suited for the classification task. Lets forget the linear SVC and try the other classifier methods.\n",
     "\n",
@@ -772,7 +772,7 @@
     "\n",
     "A logistic regression classifier is also good for separating non-linearly separable data.\n",
     "\n",
-    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/logistic_reg.png\" width=\"400\" /> *([link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/logistic_reg.png))* \n"
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/logistic_reg.png\" width=\"400\" /> *([link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/logistic_reg.png))* \n"
    ]
   },
   {
@@ -873,10 +873,10 @@
     "<table>\n",
     "    <tr>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/confusion_matrix.png\" width=\"500\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/confusion_matrix.png\" width=\"500\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/confusion_matrix_pregnancy.png\" width=\"500\" />\n",
+    "            <img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/confusion_matrix_pregnancy.png\" width=\"500\" />\n",
     "        </td>\n",
     "    </tr>\n",
     "</table>\n",
@@ -925,9 +925,9 @@
     "- The area under the curve (AUC) of the ROC curve is a measure that tells us how well our classifier can distinguish between the classes.\n",
     "\n",
     "\n",
-    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/rocs.png\" width=\"600\" /> \n",
+    "<img src=\"https://github.com/volkamerlab/ai_in_medicine/raw/master/images/rocs.png\" width=\"600\" /> \n",
     "\n",
-    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/update-2021.02/images/rocs.png)*)"
+    "(*[link to source](https://github.com/volkamerlab/ai_in_medicine/raw/master/images/rocs.png)*)"
    ]
   },
   {
