Python notebook: Correct typo in Jaime's name :)

--- a/week1_session1_grundkonzepte.ipynb
+++ b/week1_session1_grundkonzepte.ipynb
@@ -12,7 +12,7 @@
     "* **Target audience**: Medical students from Charité\n",
     "* **Course date**: July 2021\n",
     "\n",
-    "> Extended from previous contributions by Jan Philipp Albrecht and Jaime Rodriguez-Guerra."
+    "> Extended from previous contributions by Jan Philipp Albrecht and Jaime Rodríguez-Guerra."
    ]
   },
   {
