minor incorrect comments in exercise

--- a/week1_session4_intro_to_ml_and_scikit_learn.ipynb
+++ b/week1_session4_intro_to_ml_and_scikit_learn.ipynb
@@ -13,8 +13,7 @@
    "metadata": {},
    "source": [
     "- **Tutor:** Roshan Prakash Rane, AG Ritter, Charité - Universitätsmedizin Berlin (roshan-prakash.rane@charite.de)\n",
-    "- **Target audience**: Medical students from Charité\n",
-    "- **Course date**: February 2021"
+    "- **Target audience**: Medical students from Charité"
    ]
   },
   {
@@ -956,7 +955,7 @@
     "\n",
     "ax1.plot(\n",
     "    fpr, tpr, \n",
-    "    label='SVC - RBF Kernel (area = {:0.2f})'.format(svc_roc_auc)\n",
+    "    label='SVC - RBF Kernel (area = {:.2f})'.format(svc_roc_auc*100)\n",
     ")\n",
     "ax1.plot([0, 1], [0, 1],'r--')\n",
     "ax1.set_xlim([0.0, 1.0])\n",
@@ -973,7 +972,7 @@
     "\n",
     "ax2.plot(\n",
     "    fpr, tpr, \n",
-    "    label='Logistic Regression (area = {:0.2f})'.format(logit_roc_auc)\n",
+    "    label='Logistic Regression (area = {:.2f})'.format(logit_roc_auc*100)\n",
     ")\n",
     "ax2.plot([0, 1], [0, 1],'r--')\n",
     "ax2.set_xlim([0.0, 1.0])\n",
@@ -1031,6 +1030,16 @@
    "metadata": {},
    "source": [
     "Let's create a dataframe for our task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set a common random seed to avoid getting very different scores due to model stochasticity\n",
+    "np.random.seed(0)"
    ]
   },
   {
@@ -1109,7 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verification: this cell should return ((752, 8), (752, 1))\n",
+    "# verification: this cell should return ((724, 8), (724, 1))\n",
     "X.shape, y.shape "
    ]
   },
@@ -1119,7 +1128,9 @@
    "source": [
     "### 7.3 Split your data into training and test sets\n",
     "\n",
-    "You should use the train_test_split function imported from sklearn. We want you to use a test set size of 25%."
+    "You should use the `train_test_split` function imported from sklearn. We want you to use a test set size of 25%. \n",
+    "\n",
+    "Explicitly pass `shuffle=False` in `train_test_split` to make sure we all have the same train and test splits."
    ]
   },
   {
@@ -1146,7 +1157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verification: this cell should return numpy shapes ((564, 8), (188, 8), (564, 1), (188, 1))\n",
+    "# verification: this cell should return numpy shapes ((543, 8), (181, 8), (543, 1), (181, 1))\n",
     "(x_train.shape), (x_test.shape), (y_train.shape), (y_test.shape)"
    ]
   },
