--- a/week1_session3_matplotlib.ipynb
+++ b/week1_session3_matplotlib.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "- **Instructor**: Moritz Seiler, AG Ritter, Charité - Universitätsmedizin Berlin (moritz.seiler@charite.de) <br>\n",
     "- **Target audience**: Medical students from Charité<br>\n",
-    "- **Course date**: July 2021"
+    "- **Course date**: January 2022"
    ]
   },
   {
@@ -1117,7 +1117,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3) Plot the Covid-19 case fatalaty rate (CFR) by age group in Berlin and Mecklenburg-Vorpommern.**"
+    "**3) Plot the Covid-19 case fatalaty rate (CFR) by age group in Berlin and Mecklenburg-Vorpommern.**\n",
+    "\n",
+    "*Note:* CFT is defined as\n",
+    "$$CFT=\\frac{\\text{number of deaths from disease}}{\\text{number of confirmed cases of disease}}$$ "
    ]
   },
   {
@@ -1465,14 +1468,14 @@
     "ax.set_xlabel('Geschlecht')\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Gechlechterverteilung der übermittelten Covid-19 positiv Fälle in Berlin')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3) Plot the Covid-19 cases by age group in Berlin and Mecklenburg-Vorpommern.**"
+    "**3) Plot the Covid-19 case fatalaty rate (CFR) by age group in Berlin and Mecklenburg-Vorpommern.**"
    ]
   },
   {
@@ -1505,7 +1508,7 @@
     "ax.set_ylabel('CFR')\n",
     "ax.set_title('CFR nach Altersgruppe in Berlin und Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1533,7 +1536,7 @@
     "ax.set_ylabel('CFR')\n",
     "ax.set_title('CFR in Berlin und Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1602,7 +1605,7 @@
     "ax.set_xlabel('Meldedatum')\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Verlauf der übermittelten täglichen Covid-19 Infektionen in Berlin')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1640,7 +1643,7 @@
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen im Verlauf nach Altergruppe in Berlin')\n",
     "ax.legend()\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1844,7 +1847,7 @@
     "             y='y', \n",
     "             ax=ax)\n",
     "\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1893,7 +1896,7 @@
     "# Plot cumulative cases for all states over time\n",
     "fig, ax = plt.subplots(1, 1, figsize=(12,6))\n",
     "sns.lineplot(x='Meldedatum', y='AnzahlFall', data=cases_cum, hue='Bundesland')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1928,7 +1931,7 @@
     "\n",
     "ax.set_title('Gechlechterverteilung der übermittelten Covid-19-Infektionen in Berlin')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -2031,7 +2034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
