data source checked

--- a/week1_session3_matplotlib.ipynb
+++ b/week1_session3_matplotlib.ipynb
@@ -707,7 +707,7 @@
     "ax.set_xlabel('Bundesland') # Step 4\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen nach Bundesland in Deutschland')\n",
-    "#plt.show() # Step 6"
+    "plt.show() # Step 6"
    ]
   },
   {
@@ -728,7 +728,7 @@
     "ax.set_ylabel('Bundesland')\n",
     "ax.set_xlabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen nach Bundesland in Deutschland')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -766,7 +766,7 @@
     "ax.set_ylabel('Bundesland') # Step 4\n",
     "ax.set_xlabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infetionen nach Bundesland in Deutschland')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -827,7 +827,7 @@
     "ax.set_ylabel('Bundesland')\n",
     "ax.set_title('Übermittelte Covid19-Infektionen pro Bundesland');\n",
     "ax.legend()\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -909,7 +909,7 @@
     "ax.legend()\n",
     "ax.set_xlabel('Meldedatum')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -951,7 +951,7 @@
     "ax.legend()\n",
     "ax.set_xlabel('Meldedatum')\n",
     "ax.set_ylabel('Anzahl')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1001,7 +1001,7 @@
     "            bbox_inches = 'tight'); # bbox_inches = 'tight' created a padding around the figure\n",
     "\n",
     "### Step 6: Show plot\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1560,7 +1560,7 @@
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Infektionen nach Altersgruppe in Berlin and Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1576,7 +1576,7 @@
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Übermittelte Covid19-Todeszahlen nach Altersgruppe in Berlin und Mecklenburg-Vorpommern')\n",
     "ax.legend()\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1690,7 +1690,7 @@
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Verteilung übermittelter täglicher Covid-19 Infektionszahlen in Berlin und Brandenburg')\n",
     "ax.legend()\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -1871,7 +1871,7 @@
     "ax.set_xlabel('Anzahl übermittelter Fälle pro Tag')\n",
     "ax.set_ylabel('Anzahl')\n",
     "ax.set_title('Verteilung der übermittelten täglichen Covid19-Neuinfektionen in Berlin')\n",
-    "#plt.show()"
+    "plt.show()"
    ]
   },
   {
