Fixes for session 1 and 2, updates dates and names

--- a/week1_session2_numpy_pandas.ipynb
+++ b/week1_session2_numpy_pandas.ipynb
@@ -10,9 +10,9 @@
     " \n",
     "## Python Programming: `numpy` and `pandas`\n",
     "\n",
-    "- **Instructor**: Dominique Sydow, AG Volkamer, Charité (dominique.sydow@charite.de)\n",
+    "- **Instructor**: Corey Taylor, AG Volkamer, Charité (corey.taylor@charite.de)\n",
     "- **Target audience**: Medical students from the Charité\n",
-    "- **Course date**: July 2021"
+    "- **Course date**: January 2022"
    ]
   },
   {
@@ -951,7 +951,7 @@
     "# Use one condition\n",
     "data[condition]\n",
     "\n",
-    "# Use multipe conditions\n",
+    "# Use multiple conditions\n",
     "data[condition1 & condition2]  # Fullfill condition 1 AND 2\n",
     "data[condition1 & not condition2]  # Fullfill condition 1 AND not 2\n",
     "data[condition1 | condition2]  # Fullfill condition 1 OR 2\n",
@@ -1082,7 +1082,7 @@
    "source": [
     "data_berlin.groupby('Altersgruppe').sum()['AnzahlFall'].plot(\n",
     "    kind='bar', \n",
-    "    title=f'Number of all COVID19 cases in Berlin since the beginning of the pandamic ({data[\"Datenstand\"].unique()[0]})'\n",
+    "    title=f'Number of all COVID19 cases in Berlin since the beginning of the pandemic ({data[\"Datenstand\"].unique()[0]})'\n",
     ");"
    ]
   },
